--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -44,7 +44,15 @@
      <string>&amp;Map</string>
     </property>
    </widget>
+   <widget class="QMenu" name="menuTrack">
+    <property name="title">
+     <string>Track</string>
+    </property>
+    <addaction name="actionLength"/>
+    <addaction name="actionDuration"/>
+   </widget>
    <addaction name="menuFile"/>
+   <addaction name="menuTrack"/>
    <addaction name="menuMap"/>
    <addaction name="menuHelp"/>
   </widget>
@@ -71,6 +79,16 @@
   <action name="actionSave_As">
    <property name="text">
     <string>Save As...</string>
+   </property>
+  </action>
+  <action name="actionLength">
+   <property name="text">
+    <string>Length...</string>
+   </property>
+  </action>
+  <action name="actionDuration">
+   <property name="text">
+    <string>Duration...</string>
    </property>
   </action>
  </widget>
